@@ -80,6 +80,9 @@
       .form-group
         = f.label :twitter, class: 'control-label'
         .col-sm-10= f.text_field :twitter, class: 'form-control'
+      .form-group
+        = f.label :website_url, class: 'control-label'
+        .col-sm-10= f.text_field :website_url, class: 'form-control'
 
     .form-actions
       - if @user.new_record?
