@@ -20,6 +20,7 @@ GET /users
     "skype": "",
     "linkedin": "",
     "twitter": "",
+    "website_url": "",
     "extern_uid": "john.smith",
     "provider": "provider_name",
     "theme_id": 1,
@@ -38,6 +39,7 @@ GET /users
     "skype": "",
     "linkedin": "",
     "twitter": "",
+    "website_url": "",
     "extern_uid": "jack.smith",
     "provider": "provider_name",
     "theme_id": 1,
@@ -74,6 +76,7 @@ Parameters:
   "skype": "",
   "linkedin": "",
   "twitter": "",
+  "website_url": "",
   "extern_uid": "john.smith",
   "provider": "provider_name",
   "theme_id": 1,
@@ -102,6 +105,7 @@ Parameters:
 + `skype` (optional)            - Skype ID
 + `linkedin` (optional)         - Linkedin
 + `twitter` (optional)          - Twitter account
++ `website_url` (optional)      - Website url
 + `projects_limit` (optional)   - Number of projects user can create
 + `extern_uid` (optional)       - External UID
 + `provider` (optional)         - External provider name
@@ -127,6 +131,7 @@ Parameters:
 + `skype`                             - Skype ID
 + `linkedin`                          - Linkedin
 + `twitter`                           - Twitter account
++ `website_url`                       - Website url
 + `projects_limit`                    - Limit projects each user can create
 + `extern_uid`                        - External UID
 + `provider`                          - External provider name
@@ -174,6 +179,7 @@ GET /user
   "skype": "",
   "linkedin": "",
   "twitter": "",
+  "website_url": "",
   "theme_id": 1,
   "color_scheme_id": 2,
   "is_admin": false,
